css fixed bugged white space bugg

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,15 @@
 *{
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
 }
 
 #root {
-  width: 100vw;
-  min-height: 100vh;
-  margin: 0;
   background-image: url('./assets/bg.svg');
   background-repeat: no-repeat;
   background-size: cover ;
+  width: 100%;
+  min-height: 100vh;
 }
 
 .App{
