--- a/src/components/createform.scss
+++ b/src/components/createform.scss
@@ -2,22 +2,19 @@
     background-color: #252A34;
     width: 80vw;
     height: 100%;
-    
     display: flex;
     flex-direction: column;
     margin: auto;
     align-items: center;
 }
 
-.photo{
+ .photo{
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: aliceblue;
-    width: 80vw;
-    height: 30vh;
-
-    
+    width: 100%;
+    height: 20vh; 
 }
 .file {
     opacity: 1;
@@ -72,6 +69,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    width: 80%;
 }
 
 .field{
@@ -106,6 +104,7 @@
     margin: 1rem;
     display: flex;
     flex-direction: column;
+    width: 80%;
     input{
         height: 2rem;
         margin: 10px 0px;
