--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,10 +1,9 @@
 .nav {
     display: flex;
     justify-content: space-between;
-    position: sticky;
-    width: 100vw;
+    width: 100%;
     background-color: #252A34;
-    box-shadow: 0px 0px 10px rgb(95, 95, 95);
+
     
     .nav__toggle{
       position: absolute;
