--- a/src/views/home.scss
+++ b/src/views/home.scss
@@ -1,12 +1,13 @@
+
 .header-display{
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
 }
 
-.content-container{
-    
+ .content-container{
     display: flex;
     justify-content: center;
     margin-top: 10vh;
-}
+ }
